# sigfn

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  builder.bat  codecov.yml  sigfn-config.cmake.in
.github/: dependabot.yml
.github/workflows/: cmake-single-platform.yml  pipeline.yml  release.yml
docs/: CMakeLists.txt  Doxyfile.in  mainpage.md
examples/: CMakeLists.txt  pause.c  pause.cpp  sigchain.cpp
include/: sigfn.h  sigfn.hpp
src/: CMakeLists.txt  internal.hpp  sigfn.c  sigfn.cpp
test/: CMakeLists.txt  unit.c
tests/: CMakeLists.txt  Threadpool.cpp  Threadpool.hpp  unit.cpp
